# rag-cli

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
npm/: PUBLISHING.md
npm/rag-cli/: .npmignore  README.md  package.json
npm/rag-cli-darwin-arm64/: package.json
npm/rag-cli-darwin-x64/: package.json
npm/rag-cli-linux-arm64/: package.json
npm/rag-cli-linux-x64/: package.json
npm/rag-cli-win32-x64/: package.json
npm/rag-cli/src/: platform.js
rag-cli-cuda/: Cargo.toml
rag-cli-cuda/src/: main.rs
scripts/: prepare-npm.js
src/: config.rs  embed.rs  index.rs  ingest.rs  lib.rs  main.rs
test/: npm-platform.test.js  prepare-npm.test.js
