[package]
name = "rag-cli"
version = "1.0.0"
edition = "2021"
description = "Local-first RAG CLI powered by ONNX Runtime for semantic search over your files"
license = "Apache-2.0"
repository = "https://github.com/mathew-cf/rag-cli"

[lib]
name = "rag_cli"
path = "src/lib.rs"

[[bin]]
name = "rag"
path = "src/main.rs"

[dependencies]
# Inference: ONNX Runtime (CPU, statically linked via download-binaries).
ort = "=2.0.0-rc.10"

# Model download + tokenization
ureq = { version = "2", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"

# Hashing
blake3 = "1"

# Utilities
anyhow = "1"
indicatif = "0.17"
walkdir = "2"
